# cherts

./: .bumpversion.cfg  .env  .gitignore  .travis.yml  .unenv  README.rst  pyproject.toml  questions.md  requirements.txt
cherts/: __init__.py  actors.py  ai.py  config.py  config.toml  dummy_map.py  dummy_messages.py  dummy_referee.py  dummy_tokens.py  dummy_world.py  gui.py  main.py  messages.py  referee.py  world.py
docs/: Makefile  conf.py
resources/source_files/: citations.md  export_pieces.py
tests/: gui_debug.py  pytest.ini  test_world.py  test_world.toml
