[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "cherts"
author = "Kale Kundert and Alex Mitchell"
author-email = "kale@thekunderts.net"
home-page = 'https://github.com/kxgames/cherts'
requires-python = "~=3.8"
requires = [
  'kxg',
]
classifiers = [
  'Programming Language :: Python :: 3',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
]

[tool.flit.scripts]
cherts = "cherts.main:main"

[tool.flit.metadata.urls]
'Documentation' = 'https://cherts.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kxgames/cherts'
'Bug Tracker' = 'https://github.com/kxgames/cherts/issues'
'Continuous Integration' = 'https://travis-ci.org/kxgames/cherts'
'Test Coverage' = 'https://coveralls.io/github/kxgames/cherts'


